[package]
name = "rust-colors"
version = "0.1.0"
authors = ["RedIsGaming"]
edition = "2021"
description = "A library for parsing ANSI Strings to colors."
license = "MIT"
documentation = "https://docs.rs/rust-colors"
homepage = "https://redisgaming.vercel.app/"
repository = "https://github.com/RedIsGaming/rust-colors"

[dependencies]
